Fixed offscreen tooltip placement and duplicate label entries

--- a/openmdao/visualization/n2_viewer/style/partition_tree.css
+++ b/openmdao/visualization/n2_viewer/style/partition_tree.css
@@ -278,5 +278,6 @@ div.offgrid {
   font-size: 11px;
   padding: 5;
   background-color: #fff;
-  border: solid 1px #dfdfdf;   
+  border: solid 1px #dfdfdf;
+  position: absolute;
 }
